--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,10 @@ plugins {
     id 'com.android.application'
 }
 
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -29,7 +33,9 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation platform('com.google.firebase:firebase-bom:27.1.0')
+    
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
