RegistrationActivity changes. - Added new icons to project - Updated old layouts - Added layout for RegistrationActivity - Now RegistrationActivity contains validation for entries - Added new classes for validation,errors,snackbars
Signed-off-by: “Parkhomenko <parkhomenko2049@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name="activities.MainActivity"
+            android:name="com.ninjapath.besteducation.activities.MainActivity"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.MyApplication"></activity>
-        <activity android:name="activities.TypeSelectionActivity" />
-        <activity android:name="activities.RegistrationActivity" />
-        <activity android:name="activities.LoginActivity" />
-        <activity android:name="activities.GreetingActivity">
+        <activity android:name="com.ninjapath.besteducation.activities.TypeSelectionActivity" />
+        <activity android:name="com.ninjapath.besteducation.activities.RegistrationActivity" />
+        <activity android:name="com.ninjapath.besteducation.activities.LoginActivity" />
+        <activity android:name="com.ninjapath.besteducation.activities.GreetingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
