--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,25 +9,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+        <activity android:name=".activities.CreateActivity"></activity>
         <activity
-            android:name="com.ninjapath.besteducation.activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.MyApplication"/>
-        <activity android:name=".activities.TypeSelectionActivity"
-                android:theme="@style/Theme.AppCompat.WithoutActionBar"
-                />
-        <activity android:name=".activities.RegistrationActivity"
-                android:theme="@style/Theme.AppCompat.WithoutActionBar"
-                />
-        <activity android:name=".activities.LoginActivity"
-                android:theme="@style/Theme.AppCompat.WithoutActionBar"
-                />
-        <activity android:name=".activities.GreetingActivity"
-                android:theme="@style/Theme.AppCompat.WithoutActionBar">
+            android:theme="@style/Theme.MyApplication" />
+        <activity
+            android:name=".activities.TypeSelectionActivity"
+            android:theme="@style/Theme.AppCompat.WithoutActionBar" />
+        <activity
+            android:name=".activities.RegistrationActivity"
+            android:theme="@style/Theme.AppCompat.WithoutActionBar" />
+        <activity
+            android:name=".activities.LoginActivity"
+            android:theme="@style/Theme.AppCompat.WithoutActionBar" />
+        <activity
+            android:name=".activities.GreetingActivity"
+            android:theme="@style/Theme.AppCompat.WithoutActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
